--- a/app/Resources/views/menu.html.twig
+++ b/app/Resources/views/menu.html.twig
@@ -1,99 +1,78 @@
 <div><br></div>
 
-        <nav id="navbar" class="navbar navbar-expand-lg navbar-light">
-            <div id="nav-responsive" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-                <span></span>
-                <span></span>
-                <span></span>
-                <span></span>
-            </div>
-            <div class="collapse navbar-collapse" id="navbarNav">
-                <a class="navbar-brand" href="#">
-                    <img id="logo" src="https://static.wixstatic.com/media/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.jpg/v1/crop/x_193,y_162,w_1159,h_462/fill/w_266,h_105,al_c,q_80,usm_2.00_1.00_0.00/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.webp" class="d-inline-block align-top" alt="">
+<nav id="navbar" class="navbar navbar-expand-lg navbar-light">
+
+    <div id="nav-responsive" class="navbar-toggler" data-toggle="collapse" data-target="#navbarNavDropdown" aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+        <span></span>
+        <span></span>
+        <span></span>
+        <span></span>
+    </div>
+    <a class="navbar-brand mobile" href="#">
+        <img src="https://static.wixstatic.com/media/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.jpg/v1/crop/x_193,y_162,w_1159,h_462/fill/w_266,h_105,al_c,q_80,usm_2.00_1.00_0.00/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.webp" class="d-inline-block align-top" alt="">
+    </a>
+    <div class="collapse navbar-collapse" id="navbarNav">
+        <a class="navbar-brand desktop" href="#">
+            <img id="logo" src="https://static.wixstatic.com/media/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.jpg/v1/crop/x_193,y_162,w_1159,h_462/fill/w_266,h_105,al_c,q_80,usm_2.00_1.00_0.00/3ad43d_8b3a733c53d94ba8bff949ac833a95fe~mv2.webp" class="d-inline-block align-top" alt="">
+        </a>
+        <ul class="navbar-nav">
+            <li class="nav-item active">
+                <a href="#" class="nav-link">
+                    <span>Accueil</span>
                 </a>
-                <ul class="navbar-nav">
-                    <li class="nav-item active">
-                        <a href="#" class="nav-link">
-                            <span>Accueil</span>
-                        </a>
 
-                    </li>
-                    <li class="nav-item active dropdown">
-                        <a href="#" class="nav-link dropdown"><span>Homme</span></a>
-                        <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
-                            <div><a class="dropdown-item" href="#">Doudounes</a></div>
-                            <div><a class="dropdown-item" href="#">Vestes</a></div>
-                            <div><a class="dropdown-item" href="#">Pulls/Sweats</a></div>
-                            <div><a class="dropdown-item" href="#">Chemises</a></div>
-                            <div><a class="dropdown-item" href="#">T-shirts</a></div>
-                            <div><a class="dropdown-item" href="#">Chaussures</a></div>
-                            <div><a class="dropdown-item" href="#">Jeans/Chinos</a></div>
-                            <div><a class="dropdown-item" href="#">Shorts/Bermudas</a></div>
-                            <div><a class="dropdown-item" href="#">Accessoires</a></div>
-                        </div>
-                    </li>
-                    <li class="nav-item active dropdown">
-                        <a href="#" class="nav-link dropdown"><span>Femme</span></a>
-                        <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
-                            <div><a class="dropdown-item" href="#">Doudounes</a></div>
-                            <div><a class="dropdown-item" href="#">Vestes</a></div>
-                            <div><a class="dropdown-item" href="#">Pulls/Gilets</a></div>
-                            <div><a class="dropdown-item" href="#">Shorts</a></div>
-                            <div><a class="dropdown-item" href="#">Chemises/Tops</a></div>
-                            <div><a class="dropdown-item" href="#">Chaussures</a></div>
-                            <div><a class="dropdown-item" href="#">Jeans/Chinos</a></div>
-                            <div><a class="dropdown-item" href="#">Robes/Jupes</a></div>
-                            <div><a class="dropdown-item" href="#">Accessoires</a></div>
-                        </div>
-                    </li>
-                    <li class="nav-item active dropdown">
-                        <a href="#" class="nav-link dropdown"><span>Marques</span></a>
-                        <div class="dropdown-menu marques" aria-labelledby="navbarDropdownMenuLink">
-                            <div><a class="dropdown-item" href="#">Just Over The Top ( JOTT )</a></div>
-                            <div><a class="dropdown-item" href="#">Scotch & Soda</a></div>
-                            <div><a class="dropdown-item" href="#">Anthony Morato</a></div>
-                            <div><a class="dropdown-item" href="#">SAINT JAMES</a></div>
-                            <div><a class="dropdown-item" href="#">NUMÉROLOGIE</a></div>
-                            <div><a class="dropdown-item" href="#">Schmoove</a></div>
-                            <div><a class="dropdown-item" href="#">ARMISTICE</a></div>
-                            <div><a class="dropdown-item" href="#">Salsa Jeans</a></div>
-                            <div><a class="dropdown-item" href="#">La petite étoile</a></div>
-                            <div><a class="dropdown-item" href="#">La Petite Française</a></div>
-                            <div><a class="dropdown-item" href="#">DAPHNEA</a></div>
-                            <div><a class="dropdown-item" href="#">Jacadi</a></div>
-                        </div>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="#" class="nav-link"><span>Á propos</span></a>
-                    </li>
-                    <li class="nav-item active">
-                        <a href="#" class="nav-link"><span>Contact</span></a>
-                    </li>
-                </ul>
-            </div>
-        </nav>
-        <div>
-            <p>
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras finibus suscipit augue, vel commodo sapien lobortis nec. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum sed orci nec metus faucibus facilisis in at neque. Mauris lectus sem, pulvinar eget convallis ut, pretium quis magna. Curabitur dignissim, nulla ac mattis fringilla, nisi dolor pulvinar massa, semper mattis arcu odio eu magna. Donec et tortor volutpat, iaculis arcu nec, sodales odio. Suspendisse ullamcorper ac sem id tristique. Vivamus dui lacus, dapibus non ante quis, auctor auctor ex.
-
-                Cras feugiat dictum risus, ut eleifend purus volutpat eu. Cras in orci ac turpis volutpat tincidunt at ac ipsum. Integer cursus eleifend massa ac egestas. Vivamus metus mi, faucibus sit amet finibus at, condimentum in est. Cras tincidunt magna eget urna varius tempus. Aliquam in aliquam arcu. Suspendisse potenti. Donec vel mauris faucibus diam luctus molestie sed in urna. Sed sollicitudin consequat velit, ac aliquam ipsum sodales vitae.
-
-                Vestibulum a leo nulla. Aliquam mollis, nisl vel euismod maximus, turpis nibh commodo felis, eu ornare lectus sem sed eros. Suspendisse eu maximus nunc. Morbi quis vestibulum mi. Sed vitae mauris pharetra, aliquet ipsum at, pharetra mauris. Nam dui magna, pretium ac interdum in, rutrum nec velit. Mauris in posuere velit, a tincidunt est. Proin blandit maximus mi sed tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent lorem risus, fermentum sed massa sed, hendrerit semper ipsum. Nulla sollicitudin, quam id blandit luctus, magna sapien feugiat urna, vel varius massa quam rhoncus purus. Praesent sit amet tincidunt odio, vel finibus sem. Ut sed odio et eros commodo placerat eget eu enim. Praesent mauris leo, hendrerit ut massa vitae, lacinia maximus enim. Integer non ultrices massa. Etiam mollis lacus magna, ut aliquam lacus imperdiet non.
-
-                Sed sit amet mauris orci. Donec pulvinar orci sollicitudin arcu tristique, in aliquam urna malesuada. Ut augue metus, mattis nec erat ac, egestas aliquam ipsum. Pellentesque bibendum justo at diam mollis, eu sollicitudin dui suscipit. Aliquam maximus egestas nunc eget pulvinar. Fusce quis lectus non odio malesuada dictum. Etiam pretium sem risus, ac lobortis elit vehicula id. Mauris efficitur, justo a mattis dictum, turpis risus efficitur ex, nec convallis eros augue at purus. Nunc eget volutpat elit. Nullam fringilla, erat ut elementum pharetra, nulla quam maximus elit, at mattis nunc ex a eros.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras finibus suscipit augue, vel commodo sapien lobortis nec. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum sed orci nec metus faucibus facilisis in at neque. Mauris lectus sem, pulvinar eget convallis ut, pretium quis magna. Curabitur dignissim, nulla ac mattis fringilla, nisi dolor pulvinar massa, semper mattis arcu odio eu magna. Donec et tortor volutpat, iaculis arcu nec, sodales odio. Suspendisse ullamcorper ac sem id tristique. Vivamus dui lacus, dapibus non ante quis, auctor auctor ex.
-
-                Cras feugiat dictum risus, ut eleifend purus volutpat eu. Cras in orci ac turpis volutpat tincidunt at ac ipsum. Integer cursus eleifend massa ac egestas. Vivamus metus mi, faucibus sit amet finibus at, condimentum in est. Cras tincidunt magna eget urna varius tempus. Aliquam in aliquam arcu. Suspendisse potenti. Donec vel mauris faucibus diam luctus molestie sed in urna. Sed sollicitudin consequat velit, ac aliquam ipsum sodales vitae.
-
-                Vestibulum a leo nulla. Aliquam mollis, nisl vel euismod maximus, turpis nibh commodo felis, eu ornare lectus sem sed eros. Suspendisse eu maximus nunc. Morbi quis vestibulum mi. Sed vitae mauris pharetra, aliquet ipsum at, pharetra mauris. Nam dui magna, pretium ac interdum in, rutrum nec velit. Mauris in posuere velit, a tincidunt est. Proin blandit maximus mi sed tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent lorem risus, fermentum sed massa sed, hendrerit semper ipsum. Nulla sollicitudin, quam id blandit luctus, magna sapien feugiat urna, vel varius massa quam rhoncus purus. Praesent sit amet tincidunt odio, vel finibus sem. Ut sed odio et eros commodo placerat eget eu enim. Praesent mauris leo, hendrerit ut massa vitae, lacinia maximus enim. Integer non ultrices massa. Etiam mollis lacus magna, ut aliquam lacus imperdiet non.
-
-                Sed sit amet mauris orci. Donec pulvinar orci sollicitudin arcu tristique, in aliquam urna malesuada. Ut augue metus, mattis nec erat ac, egestas aliquam ipsum. Pellentesque bibendum justo at diam mollis, eu sollicitudin dui suscipit. Aliquam maximus egestas nunc eget pulvinar. Fusce quis lectus non odio malesuada dictum. Etiam pretium sem risus, ac lobortis elit vehicula id. Mauris efficitur, justo a mattis dictum, turpis risus efficitur ex, nec convallis eros augue at purus. Nunc eget volutpat elit. Nullam fringilla, erat ut elementum pharetra, nulla quam maximus elit, at mattis nunc ex a eros.
-                Lorem ipsum dolor sit amet, consectetur adipiscing elit. Cras finibus suscipit augue, vel commodo sapien lobortis nec. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Vestibulum sed orci nec metus faucibus facilisis in at neque. Mauris lectus sem, pulvinar eget convallis ut, pretium quis magna. Curabitur dignissim, nulla ac mattis fringilla, nisi dolor pulvinar massa, semper mattis arcu odio eu magna. Donec et tortor volutpat, iaculis arcu nec, sodales odio. Suspendisse ullamcorper ac sem id tristique. Vivamus dui lacus, dapibus non ante quis, auctor auctor ex.
-
-                Cras feugiat dictum risus, ut eleifend purus volutpat eu. Cras in orci ac turpis volutpat tincidunt at ac ipsum. Integer cursus eleifend massa ac egestas. Vivamus metus mi, faucibus sit amet finibus at, condimentum in est. Cras tincidunt magna eget urna varius tempus. Aliquam in aliquam arcu. Suspendisse potenti. Donec vel mauris faucibus diam luctus molestie sed in urna. Sed sollicitudin consequat velit, ac aliquam ipsum sodales vitae.
-
-                Vestibulum a leo nulla. Aliquam mollis, nisl vel euismod maximus, turpis nibh commodo felis, eu ornare lectus sem sed eros. Suspendisse eu maximus nunc. Morbi quis vestibulum mi. Sed vitae mauris pharetra, aliquet ipsum at, pharetra mauris. Nam dui magna, pretium ac interdum in, rutrum nec velit. Mauris in posuere velit, a tincidunt est. Proin blandit maximus mi sed tincidunt. Orci varius natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Praesent lorem risus, fermentum sed massa sed, hendrerit semper ipsum. Nulla sollicitudin, quam id blandit luctus, magna sapien feugiat urna, vel varius massa quam rhoncus purus. Praesent sit amet tincidunt odio, vel finibus sem. Ut sed odio et eros commodo placerat eget eu enim. Praesent mauris leo, hendrerit ut massa vitae, lacinia maximus enim. Integer non ultrices massa. Etiam mollis lacus magna, ut aliquam lacus imperdiet non.
-
-                Sed sit amet mauris orci. Donec pulvinar orci sollicitudin arcu tristique, in aliquam urna malesuada. Ut augue metus, mattis nec erat ac, egestas aliquam ipsum. Pellentesque bibendum justo at diam mollis, eu sollicitudin dui suscipit. Aliquam maximus egestas nunc eget pulvinar. Fusce quis lectus non odio malesuada dictum. Etiam pretium sem risus, ac lobortis elit vehicula id. Mauris efficitur, justo a mattis dictum, turpis risus efficitur ex, nec convallis eros augue at purus. Nunc eget volutpat elit. Nullam fringilla, erat ut elementum pharetra, nulla quam maximus elit, at mattis nunc ex a eros.
-            </p>
-        </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a href="#" class="nav-link dropdown"><span>Homme</span></a>
+                <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div><a class="dropdown-item" href="#">Doudounes</a></div>
+                    <div><a class="dropdown-item" href="#">Vestes</a></div>
+                    <div><a class="dropdown-item" href="#">Pulls/Sweats</a></div>
+                    <div><a class="dropdown-item" href="#">Chemises</a></div>
+                    <div><a class="dropdown-item" href="#">T-shirts</a></div>
+                    <div><a class="dropdown-item" href="#">Chaussures</a></div>
+                    <div><a class="dropdown-item" href="#">Jeans/Chinos</a></div>
+                    <div><a class="dropdown-item" href="#">Shorts/Bermudas</a></div>
+                    <div><a class="dropdown-item" href="#">Accessoires</a></div>
+                </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a href="#" class="nav-link dropdown"><span>Femme</span></a>
+                <div class="dropdown-menu menu" aria-labelledby="navbarDropdownMenuLink">
+                    <div><a class="dropdown-item" href="#">Doudounes</a></div>
+                    <div><a class="dropdown-item" href="#">Vestes</a></div>
+                    <div><a class="dropdown-item" href="#">Pulls/Gilets</a></div>
+                    <div><a class="dropdown-item" href="#">Shorts</a></div>
+                    <div><a class="dropdown-item" href="#">Chemises/Tops</a></div>
+                    <div><a class="dropdown-item" href="#">Chaussures</a></div>
+                    <div><a class="dropdown-item" href="#">Jeans/Chinos</a></div>
+                    <div><a class="dropdown-item" href="#">Robes/Jupes</a></div>
+                    <div><a class="dropdown-item" href="#">Accessoires</a></div>
+                </div>
+            </li>
+            <li class="nav-item active dropdown">
+                <a href="#" class="nav-link dropdown"><span>Marques</span></a>
+                <div class="dropdown-menu marques" aria-labelledby="navbarDropdownMenuLink">
+                    <div><a class="dropdown-item" href="#">Just Over The Top ( JOTT )</a></div>
+                    <div><a class="dropdown-item" href="#">Scotch & Soda</a></div>
+                    <div><a class="dropdown-item" href="#">Anthony Morato</a></div>
+                    <div><a class="dropdown-item" href="#">SAINT JAMES</a></div>
+                    <div><a class="dropdown-item" href="#">NUMÉROLOGIE</a></div>
+                    <div><a class="dropdown-item" href="#">Schmoove</a></div>
+                    <div><a class="dropdown-item" href="#">ARMISTICE</a></div>
+                    <div><a class="dropdown-item" href="#">Salsa Jeans</a></div>
+                    <div><a class="dropdown-item" href="#">La petite étoile</a></div>
+                    <div><a class="dropdown-item" href="#">La Petite Française</a></div>
+                    <div><a class="dropdown-item" href="#">DAPHNEA</a></div>
+                    <div><a class="dropdown-item" href="#">Jacadi</a></div>
+                </div>
+            </li>
+            <li class="nav-item active">
+                <a href="#" class="nav-link"><span>Á propos</span></a>
+            </li>
+            <li class="nav-item active">
+                <a href="#" class="nav-link"><span>Contact</span></a>
+            </li>
+        </ul>
+    </div>
+</nav>
