news side added

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -2,8 +2,8 @@
 
 {% block body %}
     <div class="my-slider">
-        <div><img src="{{ asset('img/CollHA2019JOTT.jpg') }}"></div>
-        <div><img src="{{ asset('img/CollHA2019SJ.jpg') }}"></div>
+        <div><p><img src="{{ asset('img/CollHA2019JOTT.jpg') }}"></p></div>
+        <div><p><img src="{{ asset('img/CollHA2019SJ.jpg') }}"></p></div>
     </div>
 
     <div class="test"></div>
@@ -16,6 +16,66 @@
             <img src="{{ asset('img/angle-right.png') }}" alt="">
         </li>
     </ul>
+
+    <div>
+        <div class="header-news">
+            <div class="line"></div><h3>Nouveautés</h3><div class="line"></div>
+        </div>
+        <div class="content-news slider-news">
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_1.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>Chino slim fit</p>
+                    <p>99,90 €</p>
+                </div>
+            </div>
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_2.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>T-shirt col rond</p>
+                    <p>39,90 €</p>
+                </div>
+            </div>
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_3_red.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>Veste La Petite Etoile</p>
+                    <p>79,90 €</p>
+                </div>
+            </div>
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_1.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>Chino slim fit</p>
+                    <p>99,90 €</p>
+                </div>
+            </div>
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_3_red.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>Veste La Petite Etoile</p>
+                    <p>79,90 €</p>
+                </div>
+            </div>
+            <div class="items-news">
+                <p><img src="{{ asset('img/item_2.jpg') }}"></p>
+                <div class="line"></div>
+                <div class="info-item-news">
+                    <p>T-shirt col rond</p>
+                    <p>39,90 €</p>
+                </div>
+            </div>
+        </div>
+    </div>
+
+    <div>
+
+    </div>
 
 
 {% endblock %}
