--- a/web/css/style.css
+++ b/web/css/style.css
@@ -7,13 +7,24 @@ body{
     border-bottom: solid #af5e25 2px;
 }
 
-.navbar{
-    position: relative;
-}
-
 #navbarNav{
     text-align: center;
+    position: absolute;
+    top: 100%;
+    z-index: 9999;
+    background-color: rgb(255, 255, 255);
+    width: 100%;
+    overflow: hidden;
+    height: 100vh;
+}
 
+.navbar-nav{
+    margin-top: 50px;
+}
+
+@keyframes menu_display {
+    from {height: 0;}
+    to {height: 100vh;}
 }
 
 .dropdown-menu{
@@ -33,104 +44,74 @@ body{
     display: block !important;
 }
 
+.mobile img{
+    height: 50px;
+}
+
 .desktop{
     display: none !important;
 }
 
-@media (min-width: 991px){
+.line{
+    height: 1.5px;
+    width: 100%;
+    background-color: grey;
+}
 
-    .dropdown:hover + .dropdown-menu, .dropdown-menu:hover{
-        overflow: hidden;
-        display: block;
-    }
+.header-news{
+    display: grid;
+    margin: auto;
+    width: 98%;
+    grid-template-columns: 2fr 1fr 2fr;
+    align-items: center;
+    margin-bottom: 30px;
+}
 
-    .dropdown:hover + .menu{
-        animation: menu .3s;
-    }
+.header-news h3{
+    text-align: center;
+    font-weight: 600;
+    margin: 0 10px;
+}
 
-    .dropdown:hover + .marques{
-        animation: marques .3s;
-    }
+/*.content-news{*/
+/*    !*display: grid;*!*/
+/*    margin: auto;*/
+/*    !*width: 98% !important;*!*/
+/*    !*grid-template-columns: repeat(5, 1fr);*!*/
+/*    align-items: center;*/
+/*    overflow: hidden;*/
+/*}*/
 
-    @-webkit-keyframes menu {
-        from {height: 0px;}
-        to {height: 300px;}
-    }
+.items-news{
+    /*width: auto !important;*/
+    height: 100%;
+    margin: 0 5px;
+    cursor: pointer;
+}
 
-    /* Standard syntax */
-    @keyframes menu {
-        from {height: 0px;}
-        to {height: 300px;}
-    }
+.items-news img{
+    width: 100%;
+    max-height: 420px;
+}
 
-    @-webkit-keyframes marques {
-        from {height: 0px;}
-        to {height: 400px;}
-    }
+.info-item-news{
+    text-align: center;
+}
 
-    /* Standard syntax */
-    @keyframes marques {
-        from {height: 0px;}
-        to {height: 400px;}
-    }
-
-    .dropdown-menu{
-        position: absolute;
-        top: 35px !important;
-        text-align: center !important;
-    }
-
-    .nav-item{
-        margin: 10px;
-    }
-
-
-
-    #navbarNav img{
-        position: -webkit-sticky;
-        position: sticky;
-    }
-
-    /* Standard syntax */
-    @keyframes stick {
-        from {width: 250px;}
-        to {width: 100px;}
-    }
-
-    /* Standard syntax */
-    @keyframes unstick {
-        from {width: 100px;}
-        to {width: 250px;}
-    }
-
-    #navbarNav{
-        position: relative;
-        padding-left: 20px;
-        padding-bottom: 10px;
-        margin: 0;
-        background-color: #fff;
-        width: 100%;
-        z-index: 1;
-    }
-
-    .mobile{
-        display: none !important;
-    }
-
-    .desktop{
-        display: inline-block !important;
-    }
-
+.info-item-news p:first-child{
+    font-weight: 600;
 }
 
 .navbar{
-    position: -webkit-sticky;
+    position: -webkit-sticky !important;
     position: sticky !important;
-    top: 0px;
+    top: 0;
     padding:0 !important;
     z-index: 999;
-
+    margin: 20px 0;
+    background-color: #ffffff;
 }
+
 
 /** HAMBURGER BUTTON **/
 
@@ -138,7 +119,7 @@ body{
     width: 30px;
     height: 20px;
     position: relative;
-/* margin: 50px auto; */
+    margin: 0 0 0 30px;
     -webkit-transform: rotate(0deg);
     -moz-transform: rotate(0deg);
     -o-transform: rotate(0deg);
@@ -151,26 +132,26 @@ body{
 }
 
 .navbar-toggler{
- border: none !important;
+    border: none !important;
 }
 
 #nav-responsive span {
-display: block;
-position: absolute;
-height: 2px;
-width: 100%;
-background: #d3531a;
-border-radius: 9px;
-opacity: 1;
-left: 0;
--webkit-transform: rotate(0deg);
--moz-transform: rotate(0deg);
--o-transform: rotate(0deg);
-transform: rotate(0deg);
--webkit-transition: .25s ease-in-out;
--moz-transition: .25s ease-in-out;
--o-transition: .25s ease-in-out;
-transition: .25s ease-in-out;
+    display: block;
+    position: absolute;
+    height: 2px;
+    width: 100%;
+    background: #d3531a;
+    border-radius: 9px;
+    opacity: 1;
+    left: 0;
+    -webkit-transform: rotate(0deg);
+    -moz-transform: rotate(0deg);
+    -o-transform: rotate(0deg);
+    transform: rotate(0deg);
+    -webkit-transition: .25s ease-in-out;
+    -moz-transition: .25s ease-in-out;
+    -o-transition: .25s ease-in-out;
+    transition: .25s ease-in-out;
 }
 /* Icon 3 */
 
@@ -247,4 +228,119 @@ transition: .25s ease-in-out;
 
 .next{
     right: 0;
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+@media (min-width: 991px){
+
+    .dropdown:hover + .dropdown-menu, .dropdown-menu:hover{
+        overflow: hidden;
+        display: block;
+    }
+
+    .dropdown:hover + .menu{
+        animation: menu .3s;
+    }
+
+    .dropdown:hover + .marques{
+        animation: marques .3s;
+    }
+
+    @-webkit-keyframes menu {
+        from {height: 0px;}
+        to {height: 300px;}
+    }
+
+    /* Standard syntax */
+    @keyframes menu {
+        from {height: 0px;}
+        to {height: 300px;}
+    }
+
+    @-webkit-keyframes marques {
+        from {height: 0px;}
+        to {height: 400px;}
+    }
+
+    /* Standard syntax */
+    @keyframes marques {
+        from {height: 0px;}
+        to {height: 400px;}
+    }
+
+    .dropdown-menu{
+          position: absolute;
+          top: 35px !important;
+          text-align: center !important;
+      }
+
+    .nav-item{
+          margin: 10px;
+      }
+
+
+    #navbarNav img{
+        position: -webkit-sticky;
+        position: sticky;
+    }
+
+    /* Standard syntax */
+    @keyframes stick {
+    from {width: 250px;}
+       to {width: 100px;}
+    }
+
+    /* Standard syntax */
+    @keyframes unstick {
+        from {width: 100px;}
+        to {width: 250px;}
+    }
+
+    #navbarNav{
+        position: relative;
+        padding-left: 20px;
+        padding-bottom: 10px;
+        margin: 0;
+        background-color: #fff;
+        width: 100%;
+        z-index: 1;
+        height: auto;
+        overflow: initial;
+    }
+
+    .navbar-nav{
+        margin-top: 0;
+    }
+
+    .mobile{
+        display: none !important;
+    }
+
+    .desktop{
+        display: inline-block !important;
+    }
+
 }
