add categories side

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -73,8 +73,57 @@
         </div>
     </div>
 
-    <div>
+    <div class="content-categories">
+        <div class="flex-categories">
+            <div class="header-categories" >
+                <div class="line"></div><h3>Homme</h3><div class="line"></div>
+            </div>
+            <div class="card-content-categories">
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p><img src=""> </p>
+                    <div>
+                        <p>Chaussure</p>
+                    </div>
+                </div>
 
+            </div>
+        </div>
+        <div></div>
+        <div class="flex-categories">
+            <div class="header-categories">
+                <div class="line"></div><h3>Femme</h3><div class="line"></div>
+            </div>
+        </div>
     </div>
 
 
