add categories card side

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -80,42 +80,41 @@
             </div>
             <div class="card-content-categories">
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/card_1.jpg') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>Chaussures</p>
                     </div>
                 </div>
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/card_2.jpg') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>Jeans/Chinos</p>
                     </div>
                 </div>
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/card_3.jpg') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>Vestes</p>
                     </div>
                 </div>
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/card_4.jpg') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>Pulls/Sweats</p>
                     </div>
                 </div>
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/card_5.jpeg') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>T-shirts</p>
                     </div>
                 </div>
                 <div class="item-categories">
-                    <p><img src=""> </p>
+                    <p class="container-img"><img src="{{ asset('img/cart_6.png') }}"> </p>
                     <div>
-                        <p>Chaussure</p>
+                        <p>Chemises</p>
                     </div>
                 </div>
-
             </div>
         </div>
         <div></div>
@@ -123,7 +122,48 @@
             <div class="header-categories">
                 <div class="line"></div><h3>Femme</h3><div class="line"></div>
             </div>
+            <div class="card-content-categories">
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_1_f.png') }}"> </p>
+                    <div>
+                        <p>Chaussures</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_2_f.png') }}"> </p>
+                    <div>
+                        <p>Jeans/Chinos</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_3_f.png') }}"> </p>
+                    <div>
+                        <p>Vestes</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_4_f.png') }}"> </p>
+                    <div>
+                        <p>Robes/Jupes</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_5_f.png') }}"> </p>
+                    <div>
+                        <p>Pulls/Gilets</p>
+                    </div>
+                </div>
+                <div class="item-categories">
+                    <p class="container-img"><img src="{{ asset('img/card_6_f.png') }}"> </p>
+                    <div>
+                        <p>Chemises/Tops</p>
+                    </div>
+                </div>
+            </div>
         </div>
+    </div>
+    <div class="bandeau-info">
+        
     </div>
 
 
