add bandeau side

--- a/app/Resources/views/index.html.twig
+++ b/app/Resources/views/index.html.twig
@@ -163,7 +163,26 @@
         </div>
     </div>
     <div class="bandeau-info">
-        
+{#        <p class="container-bg-bandeau"><img src="{{ asset('img/bg_bandeau.png') }}"></p>#}
+        <div class="content-bandeau">
+            <div class="item-bandeau item-ipad-left">
+                <p>Livraison gratuite</p>
+                <p class="grey-para">dès 150 euros d'achats</p>
+            </div>
+            <div class="item-bandeau item-ipad-left">
+                <p>Echange et retour</p>
+                <p class="grey-para">sous 14 jours</p>
+            </div>
+            <div class="item-bandeau item-ipad-right">
+                <p>Paiement sécurisé</p>
+                <p class="grey-para">Carte Bancaire / Paypal</p>
+            </div>
+            <div class="item-bandeau item-ipad-right">
+                <p>Service client</p>
+                <p class="grey-para" id="para-tel">04 67 67 27 27</p>
+                <p class="grey-para">needmontpellier@gmail.com</p>
+            </div>
+        </div>
     </div>
 
 
